--- a/test.ipynb
+++ b/test.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "ac453872",
    "metadata": {},
    "outputs": [
@@ -161,54 +161,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "在处理页面或保存 MHTML 时出错: Message: invalid session id: session deleted as the browser has closed the connection\n",
-      "from disconnected: not connected to DevTools\n",
-      "  (Session info: chrome=135.0.7049.115)\n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00BCD363+60275]\n",
-      "\tGetHandleVerifier [0x00BCD3A4+60340]\n",
-      "\t(No symbol) [0x00A006F3]\n",
-      "\t(No symbol) [0x009EFF20]\n",
-      "\t(No symbol) [0x00A0DDA2]\n",
-      "\t(No symbol) [0x00A73D2F]\n",
-      "\t(No symbol) [0x00A8DFE9]\n",
-      "\t(No symbol) [0x00A6CE86]\n",
-      "\t(No symbol) [0x00A3C623]\n",
-      "\t(No symbol) [0x00A3D474]\n",
-      "\tGetHandleVerifier [0x00E18FE3+2467827]\n",
-      "\tGetHandleVerifier [0x00E145E6+2448886]\n",
-      "\tGetHandleVerifier [0x00E2F80C+2560028]\n",
-      "\tGetHandleVerifier [0x00BE3DF5+153093]\n",
-      "\tGetHandleVerifier [0x00BEA3BD+179149]\n",
-      "\tGetHandleVerifier [0x00BD4BB8+91080]\n",
-      "\tGetHandleVerifier [0x00BD4D60+91504]\n",
-      "\tGetHandleVerifier [0x00BBFA10+4640]\n",
-      "\tBaseThreadInitThunk [0x761A5D49+25]\n",
-      "\tRtlInitializeExceptionChain [0x773BCE3B+107]\n",
-      "\tRtlGetAppContainerNamedObjectPath [0x773BCDC1+561]\n",
+      "成功提取并解码第 1 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "总页数已找到: 25\n",
+      "在第 1 页找到了 52 个匹配的元素：\n",
+      "成功提取并解码第 2 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 2 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 3 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 3 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 4 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 4 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 5 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 5 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 6 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 6 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 7 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 7 页找到了 56 个匹配的元素：\n",
+      "成功提取并解码第 8 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 8 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 9 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 9 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 10 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 10 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 11 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 11 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 12 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 12 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 13 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 13 页找到了 56 个匹配的元素：\n",
+      "成功提取并解码第 14 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 14 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 15 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 15 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 16 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 16 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 17 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 17 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 18 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 18 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 19 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 19 页找到了 56 个匹配的元素：\n",
+      "成功提取并解码第 20 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 20 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 21 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 21 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 22 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 22 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 23 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 23 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 24 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 24 页找到了 48 个匹配的元素：\n",
+      "成功提取并解码第 25 页的 HTML 内容 (使用编码: utf-8)。\n",
+      "在第 25 页找到了 21 个匹配的元素：\n",
+      "正在关闭 WebDriver...\n",
+      "WebDriver 已关闭。\n",
       "\n",
-      "正在关闭 WebDriver...\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTimeoutError\u001b[0m                              Traceback (most recent call last)",
-      "File \u001b[1;32md:\\Programs\\Anaconda3\\Lib\\socket.py:850\u001b[0m, in \u001b[0;36mcreate_connection\u001b[1;34m(address, timeout, source_address, all_errors)\u001b[0m\n\u001b[0;32m    849\u001b[0m     sock\u001b[38;5;241m.\u001b[39mbind(source_address)\n\u001b[1;32m--> 850\u001b[0m sock\u001b[38;5;241m.\u001b[39mconnect(sa)\n\u001b[0;32m    851\u001b[0m \u001b[38;5;66;03m# Break explicitly a reference cycle\u001b[39;00m\n",
-      "\u001b[1;31mTimeoutError\u001b[0m: timed out",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[99], line 127\u001b[0m\n\u001b[0;32m    125\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m driver:\n\u001b[0;32m    126\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m正在关闭 WebDriver...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 127\u001b[0m     driver\u001b[38;5;241m.\u001b[39mquit()\n\u001b[0;32m    128\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWebDriver 已关闭。\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    129\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[1;32md:\\Programs\\Anaconda3\\Lib\\site-packages\\selenium\\webdriver\\chromium\\webdriver.py:193\u001b[0m, in \u001b[0;36mChromiumDriver.quit\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    191\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m    192\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m--> 193\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mservice\u001b[38;5;241m.\u001b[39mstop()\n",
-      "File \u001b[1;32md:\\Programs\\Anaconda3\\Lib\\site-packages\\selenium\\webdriver\\common\\service.py:157\u001b[0m, in \u001b[0;36mService.stop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    155\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess\u001b[38;5;241m.\u001b[39mpoll() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    156\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 157\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msend_remote_shutdown_command()\n\u001b[0;32m    158\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m    159\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "File \u001b[1;32md:\\Programs\\Anaconda3\\Lib\\site-packages\\selenium\\webdriver\\common\\service.py:142\u001b[0m, in \u001b[0;36mService.send_remote_shutdown_command\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    139\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m    141\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m30\u001b[39m):\n\u001b[1;32m--> 142\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_connectable():\n\u001b[0;32m    143\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    144\u001b[0m     sleep(\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[1;32md:\\Programs\\Anaconda3\\Lib\\site-packages\\selenium\\webdriver\\common\\service.py:131\u001b[0m, in \u001b[0;36mService.is_connectable\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mis_connectable\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n\u001b[0;32m    129\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Establishes a socket connection to determine if the service running\u001b[39;00m\n\u001b[0;32m    130\u001b[0m \u001b[38;5;124;03m    on the port is accessible.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 131\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m utils\u001b[38;5;241m.\u001b[39mis_connectable(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mport)\n",
-      "File \u001b[1;32md:\\Programs\\Anaconda3\\Lib\\site-packages\\selenium\\webdriver\\common\\utils.py:101\u001b[0m, in \u001b[0;36mis_connectable\u001b[1;34m(port, host)\u001b[0m\n\u001b[0;32m     99\u001b[0m socket_ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    100\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 101\u001b[0m     socket_ \u001b[38;5;241m=\u001b[39m socket\u001b[38;5;241m.\u001b[39mcreate_connection((host, port), \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m    102\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m _is_connectable_exceptions:\n",
-      "File \u001b[1;32md:\\Programs\\Anaconda3\\Lib\\socket.py:857\u001b[0m, in \u001b[0;36mcreate_connection\u001b[1;34m(address, timeout, source_address, all_errors)\u001b[0m\n\u001b[0;32m    855\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m error \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[0;32m    856\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m all_errors:\n\u001b[1;32m--> 857\u001b[0m         exceptions\u001b[38;5;241m.\u001b[39mclear()  \u001b[38;5;66;03m# raise only the last error\u001b[39;00m\n\u001b[0;32m    858\u001b[0m     exceptions\u001b[38;5;241m.\u001b[39mappend(exc)\n\u001b[0;32m    859\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m sock \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "正在将提取的 1201 条产品数据保存到 Excel 文件: coles_data.xlsx\n",
+      "Excel 文件 'coles_data.xlsx' 保存成功。\n"
      ]
     }
    ],
