--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "正在获取条形码: 100%|██████████| 1479/1479 [01:24<00:00, 17.60it/s]"
+      "正在获取条形码: 100%|██████████| 1479/1479 [03:28<00:00,  7.11it/s]"
      ]
     },
     {
@@ -59,7 +59,7 @@
     "    ]\n",
     "    try:\n",
     "        completion = api_client.chat.completions.create(\n",
-    "            model=\"o4-mini\",  # 您可以根据需要更换模型\n",
+    "            model=\"gpt-4o-search-preview\",  # 您可以根据需要更换模型\n",
     "            messages=messages,\n",
     "        )\n",
     "        barcode = completion.choices[0].message.content.strip()\n",
@@ -88,7 +88,7 @@
     "        return\n",
     "    product_names = df['产品名称'].tolist()\n",
     "    barcodes = [None] * len(product_names)\n",
-    "    MAX_WORKERS = 1000 \n",
+    "    MAX_WORKERS = 20\n",
     "\n",
     "    with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
     "        future_to_index = {\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "6831cfbd",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "正在获取条形码: 100%|██████████| 2650/2650 [03:42<00:00, 11.91it/s]"
+      "正在获取条形码: 100%|██████████| 2650/2650 [12:11<00:00,  3.62it/s]"
      ]
     },
     {
@@ -178,9 +178,8 @@
     "    ]\n",
     "    try:\n",
     "        completion = api_client.chat.completions.create(\n",
-    "            model=\"gpt-4.1-mini\",  # 您可以根据需要更换模型\n",
+    "            model=\"gpt-4o-search-preview\",\n",
     "            messages=messages,\n",
-    "            temperature=0,\n",
     "        )\n",
     "        barcode = completion.choices[0].message.content.strip()\n",
     "        return barcode\n",
@@ -208,7 +207,7 @@
     "        return\n",
     "    product_names = df['产品名称'].tolist()\n",
     "    barcodes = [None] * len(product_names)\n",
-    "    MAX_WORKERS = 10 \n",
+    "    MAX_WORKERS = 20 \n",
     "\n",
     "    with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
     "        future_to_index = {\n",
@@ -234,6 +233,101 @@
     "        print(\"=\"*50)\n",
     "    except Exception as e:\n",
     "        print(f\"保存到Excel文件 '{output_file_path}' 时出错: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0c77f4dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 开始处理文件: 'woolworths_data_with_barcodes.xlsx'...\n",
+      "🔍 正在应用新的清理规则清理“条形码”列...\n",
+      "\n",
+      "==================================================\n",
+      "🎉 清理完成！\n",
+      "已将处理后的数据保存到新文件: 'woolworths_data_with_barcodes_cleaned.xlsx'\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import os\n",
+    "\n",
+    "def clean_barcode(barcode_data):\n",
+    "    \"\"\"\n",
+    "    清理条形码数据。\n",
+    "    根据新规则，使用正则表达式提取 \". [\" 前出现的数字。\n",
+    "    如果找不到匹配项，或者数据不是字符串，则返回原数据。\n",
+    "    \"\"\"\n",
+    "    # 检查输入是否为字符串，如果不是则直接返回\n",
+    "    if not isinstance(barcode_data, str):\n",
+    "        return barcode_data\n",
+    "\n",
+    "    # 更新后的正则表达式：匹配一个或多个数字 (\\d+)，其后紧跟着一个点、一个空格和一个左方括号。\n",
+    "    # 我们需要对特殊字符 . 和 [进行转义\n",
+    "    # (\\d+) 是一个捕获组，用于提取我们需要的数字部分\n",
+    "    pattern = re.compile(r'(\\d+)\\. \\[')\n",
+    "    \n",
+    "    # 在字符串中搜索该模式\n",
+    "    match = pattern.search(barcode_data)\n",
+    "    \n",
+    "    # 如果找到了匹配项，返回第一个匹配到的分组（即纯数字条形码）\n",
+    "    if match:\n",
+    "        return match.group(1)\n",
+    "    \n",
+    "    # 如果没有找到匹配项（例如，字符串是 \"Not Found\" 或已经是纯条码），返回原始字符串\n",
+    "    return barcode_data\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    主函数，用于读取Excel，清理条形码列，并保存到新文件。\n",
+    "    \"\"\"\n",
+    "    # 定义输入和输出文件名\n",
+    "    input_file = 'woolworths_data_with_barcodes.xlsx'\n",
+    "    output_file = 'woolworths_data_with_barcodes_cleaned.xlsx'\n",
+    "\n",
+    "    # 检查输入文件是否存在\n",
+    "    if not os.path.exists(input_file):\n",
+    "        print(f\"❌ 错误: 输入文件 '{input_file}' 不存在。\")\n",
+    "        print(\"请确保您已经运行了第一个脚本，并生成了此文件。\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"🚀 开始处理文件: '{input_file}'...\")\n",
+    "\n",
+    "    try:\n",
+    "        # 读取Excel文件\n",
+    "        df = pd.read_excel(input_file)\n",
+    "        \n",
+    "        # 检查“条形码”列是否存在\n",
+    "        if '条形码' not in df.columns:\n",
+    "            print(f\"❌ 错误: Excel文件 '{input_file}' 中缺少 '条形码' 列。\")\n",
+    "            return\n",
+    "            \n",
+    "        print(\"🔍 正在应用新的清理规则清理“条形码”列...\")\n",
+    "        \n",
+    "        # 使用.apply()方法将更新后的清理函数应用到“条形码”列的每一个单元格\n",
+    "        df['条形码'] = df['条形码'].apply(clean_barcode)\n",
+    "        \n",
+    "        # 将清理后的DataFrame保存到新的Excel文件\n",
+    "        df.to_excel(output_file, index=False, engine='openpyxl')\n",
+    "        \n",
+    "        print(\"\\n\" + \"=\"*50)\n",
+    "        print(f\"🎉 清理完成！\")\n",
+    "        print(f\"已将处理后的数据保存到新文件: '{output_file}'\")\n",
+    "        print(\"=\"*50)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"处理过程中发生错误: {e}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
