--- a/test.ipynb
+++ b/test.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0c77f4dc",
    "metadata": {},
    "outputs": [
@@ -248,12 +248,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 开始处理文件: 'woolworths_data_with_barcodes.xlsx'...\n",
+      "🚀 开始处理文件: 'coles_data_with_barcodes.xlsx'...\n",
       "🔍 正在应用新的清理规则清理“条形码”列...\n",
       "\n",
       "==================================================\n",
       "🎉 清理完成！\n",
-      "已将处理后的数据保存到新文件: 'woolworths_data_with_barcodes_cleaned.xlsx'\n",
+      "已将处理后的数据保存到新文件: 'coles_data_with_barcodes_cleaned.xlsx'\n",
       "==================================================\n"
      ]
     }
@@ -266,17 +266,16 @@
     "def clean_barcode(barcode_data):\n",
     "    \"\"\"\n",
     "    清理条形码数据。\n",
-    "    根据新规则，使用正则表达式提取 \". [\" 前出现的数字。\n",
-    "    如果找不到匹配项，或者数据不是字符串，则返回原数据。\n",
+    "    如果数据是字符串，则尝试用正则表达式提取12或13位的数字条形码。\n",
+    "    如果找不到匹配项，或者数据不是字符串（例如，已经是数字或空值），则返回原数据。\n",
     "    \"\"\"\n",
     "    # 检查输入是否为字符串，如果不是则直接返回\n",
     "    if not isinstance(barcode_data, str):\n",
     "        return barcode_data\n",
     "\n",
-    "    # 更新后的正则表达式：匹配一个或多个数字 (\\d+)，其后紧跟着一个点、一个空格和一个左方括号。\n",
-    "    # 我们需要对特殊字符 . 和 [进行转义\n",
-    "    # (\\d+) 是一个捕获组，用于提取我们需要的数字部分\n",
-    "    pattern = re.compile(r'(\\d+)\\. \\[')\n",
+    "    # 正则表达式模式：匹配一个由12或13位数字组成的完整单词\n",
+    "    # \\b 是单词边界，确保我们不会匹配一个更长数字的一部分\n",
+    "    pattern = re.compile(r'\\b(\\d{12,13})\\b')\n",
     "    \n",
     "    # 在字符串中搜索该模式\n",
     "    match = pattern.search(barcode_data)\n",
@@ -284,17 +283,16 @@
     "    # 如果找到了匹配项，返回第一个匹配到的分组（即纯数字条形码）\n",
     "    if match:\n",
     "        return match.group(1)\n",
-    "    \n",
-    "    # 如果没有找到匹配项（例如，字符串是 \"Not Found\" 或已经是纯条码），返回原始字符串\n",
-    "    return barcode_data\n",
+    "    else:\n",
+    "        return \"Not Found\"\n",
     "\n",
     "def main():\n",
     "    \"\"\"\n",
     "    主函数，用于读取Excel，清理条形码列，并保存到新文件。\n",
     "    \"\"\"\n",
     "    # 定义输入和输出文件名\n",
-    "    input_file = 'woolworths_data_with_barcodes.xlsx'\n",
-    "    output_file = 'woolworths_data_with_barcodes_cleaned.xlsx'\n",
+    "    input_file = 'coles_data_with_barcodes.xlsx'\n",
+    "    output_file = 'coles_data_with_barcodes_cleaned.xlsx'\n",
     "\n",
     "    # 检查输入文件是否存在\n",
     "    if not os.path.exists(input_file):\n",
