--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "正在获取条形码: 100%|██████████| 1479/1479 [03:28<00:00,  7.11it/s]"
+      "正在获取条形码: 100%|██████████| 1312/1312 [03:51<00:00,  5.66it/s]"
      ]
     },
     {
@@ -59,7 +59,7 @@
     "    ]\n",
     "    try:\n",
     "        completion = api_client.chat.completions.create(\n",
-    "            model=\"gpt-4o-search-preview\",  # 您可以根据需要更换模型\n",
+    "            model=\"gpt-4o-mini-search-preview\",  # 您可以根据需要更换模型\n",
     "            messages=messages,\n",
     "        )\n",
     "        barcode = completion.choices[0].message.content.strip()\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6831cfbd",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "正在获取条形码: 100%|██████████| 2650/2650 [12:11<00:00,  3.62it/s]"
+      "正在获取条形码: 100%|██████████| 1279/1279 [03:51<00:00,  5.54it/s]"
      ]
     },
     {
@@ -178,7 +178,7 @@
     "    ]\n",
     "    try:\n",
     "        completion = api_client.chat.completions.create(\n",
-    "            model=\"gpt-4o-search-preview\",\n",
+    "            model=\"gpt-4o-mini-search-preview\",\n",
     "            messages=messages,\n",
     "        )\n",
     "        barcode = completion.choices[0].message.content.strip()\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0c77f4dc",
    "metadata": {},
    "outputs": [
@@ -293,6 +293,99 @@
     "    # 定义输入和输出文件名\n",
     "    input_file = 'coles_data_with_barcodes.xlsx'\n",
     "    output_file = 'coles_data_with_barcodes_cleaned.xlsx'\n",
+    "\n",
+    "    # 检查输入文件是否存在\n",
+    "    if not os.path.exists(input_file):\n",
+    "        print(f\"❌ 错误: 输入文件 '{input_file}' 不存在。\")\n",
+    "        print(\"请确保您已经运行了第一个脚本，并生成了此文件。\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"🚀 开始处理文件: '{input_file}'...\")\n",
+    "\n",
+    "    try:\n",
+    "        # 读取Excel文件\n",
+    "        df = pd.read_excel(input_file)\n",
+    "        \n",
+    "        # 检查“条形码”列是否存在\n",
+    "        if '条形码' not in df.columns:\n",
+    "            print(f\"❌ 错误: Excel文件 '{input_file}' 中缺少 '条形码' 列。\")\n",
+    "            return\n",
+    "            \n",
+    "        print(\"🔍 正在应用新的清理规则清理“条形码”列...\")\n",
+    "        \n",
+    "        # 使用.apply()方法将更新后的清理函数应用到“条形码”列的每一个单元格\n",
+    "        df['条形码'] = df['条形码'].apply(clean_barcode)\n",
+    "        \n",
+    "        # 将清理后的DataFrame保存到新的Excel文件\n",
+    "        df.to_excel(output_file, index=False, engine='openpyxl')\n",
+    "        \n",
+    "        print(\"\\n\" + \"=\"*50)\n",
+    "        print(f\"🎉 清理完成！\")\n",
+    "        print(f\"已将处理后的数据保存到新文件: '{output_file}'\")\n",
+    "        print(\"=\"*50)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"处理过程中发生错误: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "55aee920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 开始处理文件: 'woolworths_data_with_barcodes.xlsx'...\n",
+      "🔍 正在应用新的清理规则清理“条形码”列...\n",
+      "\n",
+      "==================================================\n",
+      "🎉 清理完成！\n",
+      "已将处理后的数据保存到新文件: 'woolworths_data_with_barcodes_cleaned.xlsx'\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import os\n",
+    "\n",
+    "def clean_barcode(barcode_data):\n",
+    "    \"\"\"\n",
+    "    清理条形码数据。\n",
+    "    如果数据是字符串，则尝试用正则表达式提取12或13位的数字条形码。\n",
+    "    如果找不到匹配项，或者数据不是字符串（例如，已经是数字或空值），则返回原数据。\n",
+    "    \"\"\"\n",
+    "    # 检查输入是否为字符串，如果不是则直接返回\n",
+    "    if not isinstance(barcode_data, str):\n",
+    "        return barcode_data\n",
+    "\n",
+    "    # 正则表达式模式：匹配一个由12或13位数字组成的完整单词\n",
+    "    # \\b 是单词边界，确保我们不会匹配一个更长数字的一部分\n",
+    "    pattern = re.compile(r'\\b(\\d{12,13})\\b')\n",
+    "    \n",
+    "    # 在字符串中搜索该模式\n",
+    "    match = pattern.search(barcode_data)\n",
+    "    \n",
+    "    # 如果找到了匹配项，返回第一个匹配到的分组（即纯数字条形码）\n",
+    "    if match:\n",
+    "        return match.group(1)\n",
+    "    else:\n",
+    "        return \"Not Found\"\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    主函数，用于读取Excel，清理条形码列，并保存到新文件。\n",
+    "    \"\"\"\n",
+    "    # 定义输入和输出文件名\n",
+    "    input_file = 'woolworths_data_with_barcodes.xlsx'\n",
+    "    output_file = 'woolworths_data_with_barcodes_cleaned.xlsx'\n",
     "\n",
     "    # 检查输入文件是否存在\n",
     "    if not os.path.exists(input_file):\n",
